<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/sell">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/sellId">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/sell_prompt"
            android:textStyle="bold"
            android:id="@+id/what_to_sell"
            android:textColor="@color/kale"
            android:layout_marginTop="5dp"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/what_to_sell"
            android:layout_alignLeft="@id/what_to_sell"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_centerHorizontal="true"
            android:layout_centerInParent="true"
            android:id="@+id/sellOptions">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >


                <RadioGroup
                    android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                    android:layout_column="0"
                    android:id="@+id/radioGroup1">

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="145dp"
                        android:id="@+id/sellFood"
                        android:text="@string/food"
                        android:gravity="top"
                        android:layout_gravity="center"
                        android:background="@drawable/food" />

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="145dp"
                        android:id="@+id/sellLanguage"
                        android:text="@string/language"
                        android:background="@drawable/lang"
                        android:layout_gravity="center"
                        android:gravity="top"/>

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="145dp"
                        android:id="@+id/sellMoney"
                        android:text="@string/money"
                        android:background="@drawable/money"
                        android:layout_gravity="center"
                        android:gravity="top"/>

                </RadioGroup>

                <RadioGroup
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_column="1"
                    android:id="@+id/radioGroup2">

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="145dp"
                        android:id="@+id/sellEntertainment"
                        android:text="@string/entertainment"
                        android:background="@drawable/smileSquare"
                        android:layout_gravity="center"
                        android:gravity="top"/>

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="145dp"
                        android:id="@+id/sellHousing"
                        android:text="@string/housing"
                        android:background="@drawable/house"
                        android:layout_gravity="center"
                        android:gravity="top"/>

                    <RadioButton
                        android:layout_width="185dp"
                        android:layout_height="145dp"
                        android:id="@+id/sellTransportation"
                        android:text="@string/transportation"
                        android:background="@drawable/transportation2"
                        android:layout_gravity="center"
                        android:gravity="top"/>

                </RadioGroup>

            </TableRow>
        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/cont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/cont1Button"
            android:layout_below="@id/sellOptions"
            android:layout_alignParentRight="true"
            android:background="@color/darkGreen"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"/>
    </RelativeLayout>
</FrameLayout>

