<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/buyPageTwo">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical" android:layout_width="match_parent"
        android:layout_height="match_parent" android:id="@+id/buyPageTwoID">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/can_give"
            android:id="@+id/can_give"
            android:layout_marginTop="10dp"
            android:textStyle="bold"
            android:textColor="@color/kale"/>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/can_give"
            android:layout_marginTop="0dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="0dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/canProvide_options">

            <TableRow
                android:layout_width="150dp"
                android:layout_height="wrap_content" >

                <CheckBox
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="145dp"
                    android:text="@string/food"
                    android:id="@+id/provideFood"
                    android:layout_column="0"
                    android:background="@drawable/foodicon"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <CheckBox
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="145dp"
                    android:text="@string/entertainment"
                    android:id="@+id/provideEntertainment"
                    android:layout_column="1"
                    android:background="@drawable/smile"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="145dp"
                    android:text="@string/language"
                    android:id="@+id/provideLang"
                    android:layout_column="0"
                    android:background="@drawable/language"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <CheckBox
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="145dp"
                    android:text="@string/housing"
                    android:id="@+id/provideHousing"
                    android:layout_column="1"
                    android:background="@drawable/housing"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <CheckBox
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="145dp"
                    android:text="@string/money"
                    android:id="@+id/provideMoney"
                    android:layout_column="0"
                    android:background="@drawable/moneyicon"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>

                <CheckBox
                    android:layout_width="0dip"
                    android:layout_weight="0.5"
                    android:layout_height="145dp"
                    android:text="@string/transportation"
                    android:id="@+id/provideTransportation"
                    android:layout_column="1"
                    android:background="@drawable/transportation"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"/>
            </TableRow>

        </TableLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:text="@string/cont"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/cont2BuyForm"
            android:layout_below="@id/canProvide_options"
            android:layout_alignParentRight="true"
            android:background="@color/darkGreen"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"/>

    </RelativeLayout>

</FrameLayout>