<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" android:id="@+id/buyPageThree">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/buyPageThreeID"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/actionBarSize"
        tools:context="group11.cse110.com.serviceforservice.BlankFragment">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/addition_info"
            android:typeface="monospace"
            android:id="@+id/additionalInfo"
            android:textColor="@color/kale"
            android:textStyle="bold"
            android:layout_marginTop="20dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:inputType="textMultiLine"
            android:gravity="top"
            android:ems="10"
            android:id="@+id/additionalInfoForBuy"
            android:layout_below="@id/additionalInfo"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/lightGray"
            android:hint="@string/buy_hint"/>


        <Button
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:id="@+id/buySubmitButton"
            android:layout_below="@id/additionalInfoForBuy"
            android:layout_centerInParent="true"
            android:background="@color/darkGreen"
            android:layout_marginTop="60dp"/>


    </RelativeLayout>
</FrameLayout>